testsuite/tests/typecheck/should_fail/tcfail220.hsig
{-# LANGUAGE NoImplicitPrelude #-}
module ShouldFail where

data Either a b c = Left a
